--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Ous Bayaa</h1>
-								<p>Future Full Stack Engineer. Student at Lambda School.<br> WEB28 Gang - We're all going to be successful.</p>
+								<h1>Ous Baya'a</h1>
+								<p>Full Stack Engineer. Student at Lambda School.<br> The world is your oyster.</p>
 							</div>
 						</div>
 						<nav>
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/beach-img.jpg" alt="" /></span>
-								<p>Texas transplant, Canadian in California. Aiming to change the world someday with the help of LambdaSchool and it's students.</p>
+								<p>Texas transplant, Canadian in California. Aiming to change the world!</p>
 							</article>
 
 						<!-- Work -->
@@ -54,22 +54,23 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/tornado-img.jpg" alt="" /></span>
 								<p>Full Stack Engineer Student at Lambda School</p>
-								<p>Previously worked as an Independent Catastrophe Adjuster</p>
-								<p>Wreckin' stuff with coding since 2020</p>
-								<p>Find my work <a href="https://www.github.com/ousbayaa">here!</a></p>
+								<p>Time to automate and create in 2020</p>
+								<p>If I can spark the interest of one person, then hopefully, I can spark the interest of the world </p>
+								<p>Some of my work includes, my personal favourite, <a href="https://github.com/bw-exPatJournal/MarketingPage"> A mixture of LinkedIn and Instagram!</a></p>
+								<p>A NASA Site that generates <a href="https://github.com/ousbayaa/nasa-photo-of-the-day">a brand new photo everyday!</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/orange-img.jpg" alt="" /></span>
-								<p>World traveller. Ended up settling in the beautiful county of Orange!</p>
+								<p>World traveller. Ended up settling in the beautiful Orange County, CA.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								
+								<p>Feel free to check out all my work by clicking on my GitHub Profile!</p>
 								<ul class="icons">
 									<li><a href="https://www.github.com/ousbayaa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -321,7 +322,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Ous Bayaa. Designed by : <a href="https://html5up.net">HTML5 UP</a>. Pictures from: <a href="https://www.unsplash.com>">Unsplash.com</a></p>
+						<p class="copyright">&copy; Ous Baya'a. Designed by : <a href="https://html5up.net">HTML5 UP</a>. Pictures from: <a href="https://www.unsplash.com>">Unsplash.com</a></p>
 					</footer>
 
 			</div>
