--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<p>Time to automate and create in 2020</p>
 								<p>If I can spark the interest of one person, then hopefully, I can spark the interest of the world </p>
 								<p>Some of my work includes, my personal favourite, <a href="https://github.com/bw-exPatJournal/MarketingPage"> A mixture of LinkedIn and Instagram!</a></p>
-								<p>A NASA Site that generates <a href="https://github.com/ousbayaa/nasa-photo-of-the-day">a brand new photo everyday!</a></p>
+								<p>A NASA Site that generates <a href="https://nasa-photooftheday.ousbayaa.now.sh/">a brand new photo everyday!</a></p>
 							</article>
 
 						<!-- About -->
