--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/orange-img.jpg" alt="" /></span>
-								<p>World traveller. Ended up settling in the beautiful Orange County, CA.</p>
+								<p>World traveller. Ended up settling in beautiful Orange County, CA.</p>
 							</article>
 
 						<!-- Contact -->
