--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 								<p>Feel free to check out all my work by clicking on my GitHub Profile!</p>
 								<ul class="icons">
 									<li><a href="https://www.github.com/ousbayaa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ousbayaa/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
@@ -138,6 +139,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
