--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 								<p>Feel free to check out all my work by clicking on my GitHub Profile!</p>
 								<ul class="icons">
 									<li><a href="https://www.github.com/ousbayaa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+								<p>Check out my LinkedIn profile as well!</p>
+								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/ousbayaa/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
