--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<p>Full Stack Engineer Student at Lambda School</p>
 								<p>Time to automate and create in 2020</p>
 								<p>If I can spark the interest of one person, then hopefully, I can spark the interest of the world </p>
-								<p>Some of my work includes, my personal favourite, <a href="https://github.com/bw-exPatJournal/MarketingPage"> A mixture of LinkedIn and Instagram!</a></p>
+								<p>Some of my work includes, my personal favourite, <a href="https://bw-expatjournal.github.io/MarketingPage/"> A mixture of LinkedIn and Instagram!</a></p>
 								<p>A NASA Site that generates <a href="https://nasa-photooftheday.ousbayaa.now.sh/">a brand new photo everyday!</a></p>
 							</article>
 
