updated my profile, linkedin, job history, etc

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ous Baya'a</h1>
-								<p>Full Stack Engineer. Student at Lambda School.<br> The world is your oyster.</p>
+								<p>QA Engineer. Bloom Institute of Technology Alumnus.<br> Anything and everything is possible.</p>
 							</div>
 						</div>
 						<nav>
@@ -46,25 +46,25 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/beach-img.jpg" alt="" /></span>
-								<p>Texas transplant, Canadian in California. Aiming to change the world!</p>
+								<p>Texas transplant, Canadian in California. Adapting to a changing world!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/tornado-img.jpg" alt="" /></span>
-								<p>Full Stack Engineer Student at Lambda School</p>
-								<p>Time to automate and create in 2020</p>
-								<p>If I can spark the interest of one person, then hopefully, I can spark the interest of the world </p>
-								<p>Some of my work includes, my personal favourite, <a href="https://bw-expatjournal.github.io/MarketingPage/"> A mixture of LinkedIn and Instagram!</a></p>
+								<p>Worked as a catastrophe adjuster for Hurricanes Harvey, Ike, Irma, etc. </p>
+								<p>Graduated from Bloom Institute of Technology in 2020 </p>
+								<p>Worked with OasisAI and TalkTastic doing manual and automated testing </p>
+								<p>Some of my work and projects from Bloom Institute of Technology includes, <a href="https://bw-expatjournal.github.io/MarketingPage/"> A mixture of LinkedIn and Instagram!</a></p>
 								<p>A NASA Site that generates <a href="https://nasa-photooftheday.ousbayaa.now.sh/">a brand new photo everyday!</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/orange-img.jpg" alt="" /></span>
-								<p>World traveller. Ended up settling in beautiful Orange County, CA.</p>
+								<span class="image main"><img src="images/SM.jpeg" alt="" /></span>
+								<p>World traveller. Ended up settling in sunny Santa Monica, CA.</p>
 							</article>
 
 						<!-- Contact -->
@@ -76,7 +76,7 @@
 								</ul>
 								<p>Check out my LinkedIn profile as well!</p>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/ousbayaa/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ous-bayaa/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
