--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ous Baya'a</h1>
-								<p>QA Engineer. Bloom Institute of Technology Alumnus.<br> Anything and everything is possible.</p>
+								<p>QA Engineer. Bloom Institute of Technology Alumnus.<br> Anything is possible.</p>
 							</div>
 						</div>
 						<nav>
