--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 								<p>Worked as a catastrophe adjuster for Hurricanes Harvey, Ike, Irma, etc. </p>
 								<p>Graduated from Bloom Institute of Technology in 2020 </p>
 								<p>Worked with OasisAI and TalkTastic doing manual and automated testing </p>
+								<p>Experienced with Linear (Jira equivalent), Python, Pytest, Postman, PostgreSQL </p>
 								<p>Some of my work and projects from Bloom Institute of Technology includes, <a href="https://bw-expatjournal.github.io/MarketingPage/"> A mixture of LinkedIn and Instagram!</a></p>
 								<p>A NASA Site that generates <a href="https://nasa-photooftheday.ousbayaa.now.sh/">a brand new photo everyday!</a></p>
 							</article>
